--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "http-proxy": "^1.16.2",
+    "http-proxy-middleware": "^0.18.0",
     "mongoose": "^5.0.11",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.3",
+    "request": "^2.85.0",
     "serve-favicon": "~2.4.5"
   }
 }
